# IT_Support_Ticket_Classification_System

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  SETUP_NOTES.md  context.docx  pyproject.toml  requirements.txt  setup.py  ~$ontext.docx
assets/: README.md
backend/: README.md
docs/: README.md
frontend/: README.md  tailwind.config.js
frontend/public/: index.html  landing.html
frontend/public/images/: img.jpg:Zone.Identifier
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDashboard.ts  useTickets.ts
frontend/src/pages/: CreateAccount.tsx  CreateTicket.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.css  Login.tsx  SearchResults.tsx  Settings.tsx  TicketDetails.tsx  TicketList.tsx
frontend/src/services/: api.ts
frontend/src/styles/: GlobalStyles.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
src/it_support_system/: cli.py  main.py
src/it_support_system/api/: __init__.py  auth.py  dashboard.py  schemas.py  search.py  tickets.py  upload.py  users.py
src/it_support_system/config/: settings.py
src/it_support_system/models/: __init__.py  activity.py  classification.py  database.py  ticket.py  user.py
src/it_support_system/services/: __init__.py  dashboard_service.py  ml_service.py  search_service.py  ticket_service.py  user_service.py
src/it_support_system/utils/: __init__.py  auth.py  exceptions.py  logging.py
